--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
 dropbox==9.2.0
+-e git+https://github.com/AjitisAjit/dropboxutils@94dcd4f0360dc6c8f319c29e7b3fcb7630fd8c2e#egg=dropboxutils
 idna==2.8
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 more-itertools==4.3.0
+numpy==1.15.4
+pandas==0.23.4
 pluggy==0.8.0
 py==1.7.0
+pylint==2.2.2
 pytest==4.0.1
+python-dateutil==2.7.5
+pytz==2018.7
 requests==2.21.0
 six==1.12.0
+typed-ast==1.1.0
 urllib3==1.24.1
+wrapt==1.10.11
