--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
 dropbox==9.2.0
--e git+https://github.com/AjitisAjit/dropboxutils@9958ba941ac60cae8d270319ebab2f6394cde609#egg=dropboxutils
+-e git+https://github.com/AjitisAjit/dropboxutils@efa9d37cee52a4a5f38b58fcdce0844f372767a7#egg=dropboxutils
 idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -23,3 +23,4 @@ six==1.12.0
 typed-ast==1.1.0
 urllib3==1.24.1
 wrapt==1.10.11
+XlsxWriter==1.1.2
