Add cleans up writer with seperate functions for cols and rows
This finishes test case for excel writer and cleans up the writer
function by seperating out funtionality for setting row and column
format into their own seperate functions.
The test yaml file is modified accordingly

--- a/tests/test-data/excel_write.yaml
+++ b/tests/test-data/excel_write.yaml
@@ -2,14 +2,17 @@
 
 ---
 index: False
+zoom: 80
+frozen_panes: "1, 1"
 sheet: "Sheet1"
 rows:
   "0":
+    align: True
     height:
     style:
-      text-wrap: True
+      text_wrap: True
       bg_color: "#191970"
-      font-color: "#f2f2f2"
+      font_color: "#f2f2f2"
 
 columns:
   "0:2":
@@ -17,4 +20,9 @@ columns:
     style:
       text_wrap: False
       bg_color: "#f2f2f2"
+  "3:4":
+    width: 20
+    style:
+      text_wrap: True
+      bg_color: "#aa1100"
 ---
