--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
 dropbox==9.2.0
--e git+https://github.com/AjitisAjit/dropboxutils@efa9d37cee52a4a5f38b58fcdce0844f372767a7#egg=dropboxutils
+-e git+https://github.com/AjitisAjit/dropboxutils@01b396e29ca79a347a3aa33951353fef47d67c35#egg=dropboxutils
 idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -18,9 +18,11 @@ pylint==2.2.2
 pytest==4.0.1
 python-dateutil==2.7.5
 pytz==2018.7
+PyYAML==3.13
 requests==2.21.0
 six==1.12.0
 typed-ast==1.1.0
 urllib3==1.24.1
 wrapt==1.10.11
+xlrd==1.1.0
 XlsxWriter==1.1.2
