--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,13 @@ verify_ssl = true
 pytest = "*"
 coverage  = "*"
 flake8 = "*"
+xlsxwriter = "*"
 
 [packages]
 dropbox = "*"
 python-dotenv = "*"
+pandas = "*"
+xlrd = "*"
 
 [requires]
 python_version = "3.7"
